:bug: Fix colour contrast and focus for skip to main content link

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,7 +70,7 @@ body {
   font-size: 1rem;
   background-color: var(--color-bg);
   color: var(--color-fg);
-  padding: 0 2rem 1rem 2rem;
+  padding: 1rem 2rem;
 }
 
 a {
@@ -206,7 +206,7 @@ strong {
   font-family: var(--font-family-bold);
   display: flex;
   justify-content: center;
-  color: var(--color-bg);
+  color: var(--color-highlight);
   text-decoration: none;
   font-size: 1rem;
   line-height: 1;
@@ -215,6 +215,12 @@ strong {
   margin-right: auto;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
+  position: absolute;
+  top: -100px;
+  left: 1rem;
+}
+.header__skipToMainContent:focus {
+  top: 1rem;
 }
 
 .header__skipToMainContent:focus {
