--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -13,7 +13,7 @@ body {
   font-size: 1rem;
   background-color: var(--color-bg);
   color: var(--color-fg);
-  padding: 0 2rem 1rem 2rem;
+  padding: 1rem 2rem;
 }
 
 a {
